Fix missing space, fix bug with z-index

--- a/src/common/layout/container.scss
+++ b/src/common/layout/container.scss
@@ -97,7 +97,7 @@ main {
   .center_container_header {
     background-color: white;
     position: fixed;
-    z-index: 4;
+    z-index: 2;
     margin-top: 0;
     padding-top: 14px;
     border-right: solid #c9d6cd 1px;
